--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -160,6 +160,7 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 167.17.40.92;
 allow 171.25.193.131;
 allow 171.25.193.132;
 allow 171.25.193.20;
@@ -603,7 +604,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.232;
+allow 198.167.206.235;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -886,7 +887,6 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -895,6 +895,7 @@ allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
+allow 23.190.216.8;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -963,12 +964,12 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
+allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1837,7 +1838,6 @@ allow 82.153.138.125;
 allow 82.153.138.184;
 allow 82.153.138.241;
 allow 82.153.138.7;
-allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
