--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -461,9 +461,6 @@ allow 185.241.208.82;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
-allow 185.246.188.115;
-allow 185.246.188.116;
-allow 185.246.188.117;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
@@ -887,10 +884,10 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
-allow 23.137.255.85;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.177.185.98;
@@ -970,6 +967,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1590,6 +1588,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:11::5e3d;
@@ -1863,6 +1862,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
