--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -213,6 +213,7 @@ allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
+allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.155;
 allow 178.175.148.246;
@@ -280,6 +281,7 @@ allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.138.88.25;
+allow 185.141.216.154;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -583,7 +585,6 @@ allow 194.55.167.14;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.177.94.59;
 allow 195.246.231.197;
 allow 195.47.238.176;
 allow 195.47.238.177;
@@ -1169,6 +1170,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
