--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -345,6 +345,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
