--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -213,6 +213,7 @@ deny 178.162.175.5;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
+deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.155;
 deny 178.175.148.246;
@@ -280,6 +281,7 @@ deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.132.53.188;
 deny 185.138.88.25;
+deny 185.141.216.154;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -583,7 +585,6 @@ deny 194.55.167.14;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
-deny 195.177.94.59;
 deny 195.246.231.197;
 deny 195.47.238.176;
 deny 195.47.238.177;
@@ -1169,6 +1170,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
