--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -345,6 +345,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
