--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -583,6 +583,7 @@ allow 194.26.192.77;
 allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -914,7 +915,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1516,6 +1516,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
