--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -145,7 +145,6 @@ allow 152.53.210.165;
 allow 152.53.48.80;
 allow 152.53.53.243;
 allow 154.16.116.61;
-allow 154.26.159.157;
 allow 154.53.58.161;
 allow 160.119.249.240;
 allow 160.187.148.71;
@@ -583,7 +582,6 @@ allow 194.26.192.77;
 allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -885,6 +883,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -936,6 +935,7 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
+allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
@@ -965,6 +965,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1229,7 +1230,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1512,7 +1512,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1747,7 +1746,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1813,7 +1811,6 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.90.6.154;
 allow 78.142.18.219;
 allow 78.159.131.103;
 allow 79.100.12.71;
