--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -144,6 +144,7 @@ deny 2602:fb54:1400::1d;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -407,7 +408,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -690,7 +690,6 @@ deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
