--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 102.211.56.20;
 allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
-allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
@@ -149,6 +148,7 @@ allow 154.26.159.157;
 allow 154.53.58.161;
 allow 160.119.249.240;
 allow 160.187.148.71;
+allow 161.129.68.162;
 allow 162.19.7.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -933,7 +933,6 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2.56.10.36;
@@ -953,7 +952,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1492,6 +1490,7 @@ allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
+allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
@@ -1617,7 +1616,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1798,6 +1796,7 @@ allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.210;
+allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
@@ -1839,6 +1838,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
+allow 82.29.128.145;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
