--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -116,7 +116,6 @@ allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -131,7 +130,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -669,6 +667,7 @@ allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
+allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
