--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -274,6 +274,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
+allow 185.130.47.58;
 allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
@@ -580,7 +581,6 @@ allow 194.26.192.77;
 allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -915,6 +915,7 @@ allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -950,7 +951,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1228,6 +1228,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1263,6 +1264,7 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:d380:0:103:acab:4c4b:ac4b:1312;
 allow 2a07:6d80:1e01:3a13::;
+allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:2dc2:0:5963::;
@@ -1510,7 +1512,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1614,7 +1615,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1745,6 +1745,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1923,6 +1924,5 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
-allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
